--- a/nextflow.config
+++ b/nextflow.config
@@ -1,11 +1,11 @@
 profiles {
     standard {
         process {
-            withName: 'Trim' {
+            withName: 'Trim_PE' {
                 cpus = 8
                 memory = 32.GB
             }
-            withName: 'Align' {
+            withName: 'Align_PE' {
                 cpus = 16
                 memory = 64.GB
             }
