--- a/nextflow.config
+++ b/nextflow.config
@@ -9,6 +9,14 @@ profiles {
                 cpus = 8
                 memory = 32.GB
             }
+            withName: 'Align_SE' {
+                cpus = 8
+                memory = 32.GB
+            }
+            withName: 'Align_SE' {
+                cpus = 8
+                memory = 32.GB
+            }
         aws.client.maxParallelTransfers = 4
     }
     testing {
